crates/bevy_reflect_compile_fail_tests/tests/reflect_remote/nested.fail.stderr
error[E0277]: the trait bound `TheirInner<T>: TypePath` is not satisfied
  --> tests/reflect_remote/nested.fail.rs:14:20
   |
14 |         pub inner: super::external_crate::TheirInner<T>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TypePath` is not implemented for `TheirInner<T>`
   |
   = help: the following other types implement trait `TypePath`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `NamedField::new`
  --> /home/runner/work/bevy/bevy/crates/bevy_reflect/src/fields.rs:16:29
   |
16 |     pub fn new<T: Reflect + TypePath>(name: &'static str) -> Self {
   |                             ^^^^^^^^ required by this bound in `NamedField::new`

error[E0277]: the trait bound `T: FromReflect` is not satisfied
  --> tests/reflect_remote/nested.fail.rs:27:20
   |
27 |         pub inner: MyInner<T>,
   |                    ^^^^^^^^^^ the trait `FromReflect` is not implemented for `T`
   |
note: required for `incorrect_inner_type::MyInner<T>` to implement `TypePath`
  --> tests/reflect_remote/nested.fail.rs:30:5
   |
30 |     #[reflect_remote(super::external_crate::TheirInner<T>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
31 |     struct MyInner<T: Reflect>(pub T);
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `NamedField::new`
  --> /home/runner/work/bevy/bevy/crates/bevy_reflect/src/fields.rs:16:29
   |
16 |     pub fn new<T: Reflect + TypePath>(name: &'static str) -> Self {
   |                             ^^^^^^^^ required by this bound in `NamedField::new`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
25 |     struct MyOuter<T: Reflect + bevy_reflect::FromReflect> {
61 |     fn as_wrapper_mut(remote: &mut Self::Remote) -> &mut Self;
   |        ^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/nested.fail.rs:51:5
   |
51 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `TheirInner<T>`, found `TheirInner<bool>`
52 |     struct MyOuter<T: Reflect> {
   |                    - this type parameter
   |
   = note: `?` operator cannot convert from `TheirInner<bool>` to `TheirInner<T>`
   = note: expected struct `TheirInner<T>`
              found struct `TheirInner<bool>`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/nested.fail.rs:55:20
   |
51 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     -------------------------------------------------------
   |     |
   |     expected due to the type of this binding
   |     in this procedural macro expansion
52 |     struct MyOuter<T: Reflect> {
   |                    - this type parameter
...
55 |         pub inner: super::external_crate::TheirInner<bool>,
   |                    ^^^^^ expected `TheirInner<T>`, found `TheirInner<bool>`
   |
   = note: expected struct `TheirInner<T>`
              found struct `TheirInner<bool>`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)
